export const snapshot = {};

snapshot[`hello-world.c basic output 1`] = `
\`<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>hello-world.c</title>
  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
  <style>
    /* Custom prose styling since Tailwind prose isn't available in CDN */
    .prose {
      color: #374151;
      max-width: none;
    }
    .prose h1 {
      font-size: 1.5rem;
      font-weight: 700;
      margin-bottom: 0.75rem;
      margin-top: 1.5rem;
      color: #111827;
      line-height: 1.25;
    }
    .prose h2 {
      font-size: 1.25rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1.25rem;
      color: #111827;
      line-height: 1.3;
    }
    .prose h3 {
      font-size: 1.125rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1rem;
      color: #111827;
      line-height: 1.35;
    }
    .prose p {
      margin-bottom: 1rem;
      line-height: 1.6;
    }
    .prose ul, .prose ol {
      margin-bottom: 1rem;
      padding-left: 1.5rem;
    }
    .prose li {
      margin-bottom: 0.25rem;
      line-height: 1.6;
    }
    .prose ul li {
      list-style-type: disc;
    }
    .prose ol li {
      list-style-type: decimal;
    }
    .prose blockquote {
      border-left: 4px solid #e5e7eb;
      padding-left: 1rem;
      margin: 1rem 0;
      font-style: italic;
      color: #6b7280;
    }
    .prose code {
      background-color: #f3f4f6;
      padding: 0.125rem 0.25rem;
      border-radius: 0.25rem;
      font-size: 0.875rem;
      font-family: ui-monospace, SFMono-Regular, "Roboto Mono", "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
    }
    .prose pre {
      background-color: #1f2937;
      color: #e5e7eb;
      padding: 0.75rem;
      border-radius: 0.375rem;
      font-size: 0.875rem;
      overflow-x: auto;
      margin: 1rem 0;
    }
    .prose pre code {
      background-color: transparent;
      padding: 0;
      color: inherit;
    }
    .prose strong {
      font-weight: 600;
      color: #111827;
    }
    .prose em {
      font-style: italic;
    }
    .prose a {
      color: #2563eb;
      text-decoration: underline;
    }
    .prose a:hover {
      color: #1d4ed8;
    }
  </style>
</head>
<body class="bg-gray-50 font-sans">
  <div class="max-w-7xl mx-auto">
    <header class="py-8 px-6 bg-white shadow-sm border-b">
      <h1 class="text-3xl font-bold text-gray-900">hello-world.c</h1>
      <div class="text-gray-600 mt-2 prose">Literate Programming Documentation</div>
    </header>
    
    <main class="block lg:flex min-h-screen">
      
    
    <!-- File Header: tests/c/hello-world.c -->
    <div class="bg-gray-100 border-b-2 border-gray-300 lg:hidden w-full">
      <div class="w-full lg:w-2/5 bg-gray-50 border-r border-gray-300">
        <div class="p-6">
          <h2 class="text-xl font-semibold text-gray-800 mb-2">
            <svg class="inline-block w-4 h-4 mr-2 text-gray-600" fill="currentColor" viewBox="0 0 20 20">
              <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd"></path>
            </svg>
            hello-world.c
          </h2>
        </div>
      </div>
      <div class="hidden lg:block w-3/5 bg-gray-100">
        <div class="p-6">
          <div class="h-full min-h-[3rem] flex items-center">
            <span class="text-gray-500 text-sm italic">Source file</span>
          </div>
        </div>
      </div>
    </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p><code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

              </div>
            </div>
          </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">#include</span><span style="color:#9ECBFF"> &#x3C;stdio.h></span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">int</span><span style="color:#B392F0"> main</span><span style="color:#E1E4E8">(</span><span style="color:#F97583">void</span><span style="color:#E1E4E8">) {</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>Print hello world to the user</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#B392F0">printf</span><span style="color:#E1E4E8">(</span><span style="color:#9ECBFF">"Hello, world!</span><span style="color:#79B8FF">\\\\n</span><span style="color:#9ECBFF">"</span><span style="color:#E1E4E8">);</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>Return zero, indicating succcess</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">return</span><span style="color:#79B8FF"> 0</span><span style="color:#E1E4E8">;</span></span>
<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>This program can be compiled and run with:
<code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

              </div>
            </div>
          </div>
    <div class="hidden lg:flex lg:flex-col w-full">
      
    <!-- File Header: tests/c/hello-world.c -->
    <div class="bg-gray-100 border-b-2 border-gray-300 lg:flex w-full">
      <div class="w-full lg:w-2/5 bg-gray-50 border-r border-gray-300">
        <div class="p-6">
          <h2 class="text-xl font-semibold text-gray-800 mb-2">
            <svg class="inline-block w-4 h-4 mr-2 text-gray-600" fill="currentColor" viewBox="0 0 20 20">
              <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd"></path>
            </svg>
            hello-world.c
          </h2>
        </div>
      </div>
      <div class="hidden lg:block w-3/5 bg-gray-100">
        <div class="p-6">
          <div class="h-full min-h-[3rem] flex items-center">
            <span class="text-gray-500 text-sm italic">Source file</span>
          </div>
        </div>
      </div>
    </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p><code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <div class="h-full min-h-[4rem]"></div>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">#include</span><span style="color:#9ECBFF"> &#x3C;stdio.h></span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">int</span><span style="color:#B392F0"> main</span><span style="color:#E1E4E8">(</span><span style="color:#F97583">void</span><span style="color:#E1E4E8">) {</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>Print hello world to the user</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#B392F0">printf</span><span style="color:#E1E4E8">(</span><span style="color:#9ECBFF">"Hello, world!</span><span style="color:#79B8FF">\\\\n</span><span style="color:#9ECBFF">"</span><span style="color:#E1E4E8">);</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>Return zero, indicating succcess</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">return</span><span style="color:#79B8FF"> 0</span><span style="color:#E1E4E8">;</span></span>
<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>This program can be compiled and run with:
<code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <div class="h-full min-h-[4rem]"></div>
                </div>
              </div>
            </div>
    </div>
    </main>
  </div>
</body>
</html>
\`
`;

snapshot[`hello-world.c with custom title and description 1`] = `
\`<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Custom Test Title</title>
  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
  <style>
    /* Custom prose styling since Tailwind prose isn't available in CDN */
    .prose {
      color: #374151;
      max-width: none;
    }
    .prose h1 {
      font-size: 1.5rem;
      font-weight: 700;
      margin-bottom: 0.75rem;
      margin-top: 1.5rem;
      color: #111827;
      line-height: 1.25;
    }
    .prose h2 {
      font-size: 1.25rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1.25rem;
      color: #111827;
      line-height: 1.3;
    }
    .prose h3 {
      font-size: 1.125rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1rem;
      color: #111827;
      line-height: 1.35;
    }
    .prose p {
      margin-bottom: 1rem;
      line-height: 1.6;
    }
    .prose ul, .prose ol {
      margin-bottom: 1rem;
      padding-left: 1.5rem;
    }
    .prose li {
      margin-bottom: 0.25rem;
      line-height: 1.6;
    }
    .prose ul li {
      list-style-type: disc;
    }
    .prose ol li {
      list-style-type: decimal;
    }
    .prose blockquote {
      border-left: 4px solid #e5e7eb;
      padding-left: 1rem;
      margin: 1rem 0;
      font-style: italic;
      color: #6b7280;
    }
    .prose code {
      background-color: #f3f4f6;
      padding: 0.125rem 0.25rem;
      border-radius: 0.25rem;
      font-size: 0.875rem;
      font-family: ui-monospace, SFMono-Regular, "Roboto Mono", "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
    }
    .prose pre {
      background-color: #1f2937;
      color: #e5e7eb;
      padding: 0.75rem;
      border-radius: 0.375rem;
      font-size: 0.875rem;
      overflow-x: auto;
      margin: 1rem 0;
    }
    .prose pre code {
      background-color: transparent;
      padding: 0;
      color: inherit;
    }
    .prose strong {
      font-weight: 600;
      color: #111827;
    }
    .prose em {
      font-style: italic;
    }
    .prose a {
      color: #2563eb;
      text-decoration: underline;
    }
    .prose a:hover {
      color: #1d4ed8;
    }
  </style>
</head>
<body class="bg-gray-50 font-sans">
  <div class="max-w-7xl mx-auto">
    <header class="py-8 px-6 bg-white shadow-sm border-b">
      <h1 class="text-3xl font-bold text-gray-900">Custom Test Title</h1>
      <div class="text-gray-600 mt-2 prose"><p>This is a <strong>test</strong> with <em>markdown</em> support!</p>
</div>
    </header>
    
    <main class="block lg:flex min-h-screen">
      
    
    <!-- File Header: tests/c/hello-world.c -->
    <div class="bg-gray-100 border-b-2 border-gray-300 lg:hidden w-full">
      <div class="w-full lg:w-2/5 bg-gray-50 border-r border-gray-300">
        <div class="p-6">
          <h2 class="text-xl font-semibold text-gray-800 mb-2">
            <svg class="inline-block w-4 h-4 mr-2 text-gray-600" fill="currentColor" viewBox="0 0 20 20">
              <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd"></path>
            </svg>
            hello-world.c
          </h2>
        </div>
      </div>
      <div class="hidden lg:block w-3/5 bg-gray-100">
        <div class="p-6">
          <div class="h-full min-h-[3rem] flex items-center">
            <span class="text-gray-500 text-sm italic">Source file</span>
          </div>
        </div>
      </div>
    </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p><code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

              </div>
            </div>
          </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">#include</span><span style="color:#9ECBFF"> &#x3C;stdio.h></span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">int</span><span style="color:#B392F0"> main</span><span style="color:#E1E4E8">(</span><span style="color:#F97583">void</span><span style="color:#E1E4E8">) {</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>Print hello world to the user</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#B392F0">printf</span><span style="color:#E1E4E8">(</span><span style="color:#9ECBFF">"Hello, world!</span><span style="color:#79B8FF">\\\\n</span><span style="color:#9ECBFF">"</span><span style="color:#E1E4E8">);</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>Return zero, indicating succcess</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">return</span><span style="color:#79B8FF"> 0</span><span style="color:#E1E4E8">;</span></span>
<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>This program can be compiled and run with:
<code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

              </div>
            </div>
          </div>
    <div class="hidden lg:flex lg:flex-col w-full">
      
    <!-- File Header: tests/c/hello-world.c -->
    <div class="bg-gray-100 border-b-2 border-gray-300 lg:flex w-full">
      <div class="w-full lg:w-2/5 bg-gray-50 border-r border-gray-300">
        <div class="p-6">
          <h2 class="text-xl font-semibold text-gray-800 mb-2">
            <svg class="inline-block w-4 h-4 mr-2 text-gray-600" fill="currentColor" viewBox="0 0 20 20">
              <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd"></path>
            </svg>
            hello-world.c
          </h2>
        </div>
      </div>
      <div class="hidden lg:block w-3/5 bg-gray-100">
        <div class="p-6">
          <div class="h-full min-h-[3rem] flex items-center">
            <span class="text-gray-500 text-sm italic">Source file</span>
          </div>
        </div>
      </div>
    </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p><code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <div class="h-full min-h-[4rem]"></div>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">#include</span><span style="color:#9ECBFF"> &#x3C;stdio.h></span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">int</span><span style="color:#B392F0"> main</span><span style="color:#E1E4E8">(</span><span style="color:#F97583">void</span><span style="color:#E1E4E8">) {</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>Print hello world to the user</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#B392F0">printf</span><span style="color:#E1E4E8">(</span><span style="color:#9ECBFF">"Hello, world!</span><span style="color:#79B8FF">\\\\n</span><span style="color:#9ECBFF">"</span><span style="color:#E1E4E8">);</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>Return zero, indicating succcess</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">return</span><span style="color:#79B8FF"> 0</span><span style="color:#E1E4E8">;</span></span>
<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>This program can be compiled and run with:
<code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <div class="h-full min-h-[4rem]"></div>
                </div>
              </div>
            </div>
    </div>
    </main>
  </div>
</body>
</html>
\`
`;

snapshot[`hello-world.c with code URL 1`] = `
\`<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>hello-world.c</title>
  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
  <style>
    /* Custom prose styling since Tailwind prose isn't available in CDN */
    .prose {
      color: #374151;
      max-width: none;
    }
    .prose h1 {
      font-size: 1.5rem;
      font-weight: 700;
      margin-bottom: 0.75rem;
      margin-top: 1.5rem;
      color: #111827;
      line-height: 1.25;
    }
    .prose h2 {
      font-size: 1.25rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1.25rem;
      color: #111827;
      line-height: 1.3;
    }
    .prose h3 {
      font-size: 1.125rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1rem;
      color: #111827;
      line-height: 1.35;
    }
    .prose p {
      margin-bottom: 1rem;
      line-height: 1.6;
    }
    .prose ul, .prose ol {
      margin-bottom: 1rem;
      padding-left: 1.5rem;
    }
    .prose li {
      margin-bottom: 0.25rem;
      line-height: 1.6;
    }
    .prose ul li {
      list-style-type: disc;
    }
    .prose ol li {
      list-style-type: decimal;
    }
    .prose blockquote {
      border-left: 4px solid #e5e7eb;
      padding-left: 1rem;
      margin: 1rem 0;
      font-style: italic;
      color: #6b7280;
    }
    .prose code {
      background-color: #f3f4f6;
      padding: 0.125rem 0.25rem;
      border-radius: 0.25rem;
      font-size: 0.875rem;
      font-family: ui-monospace, SFMono-Regular, "Roboto Mono", "Cascadia Code", "Source Code Pro", Menlo, Consolas, "DejaVu Sans Mono", monospace;
    }
    .prose pre {
      background-color: #1f2937;
      color: #e5e7eb;
      padding: 0.75rem;
      border-radius: 0.375rem;
      font-size: 0.875rem;
      overflow-x: auto;
      margin: 1rem 0;
    }
    .prose pre code {
      background-color: transparent;
      padding: 0;
      color: inherit;
    }
    .prose strong {
      font-weight: 600;
      color: #111827;
    }
    .prose em {
      font-style: italic;
    }
    .prose a {
      color: #2563eb;
      text-decoration: underline;
    }
    .prose a:hover {
      color: #1d4ed8;
    }
  </style>
</head>
<body class="bg-gray-50 font-sans">
  <div class="max-w-7xl mx-auto">
    <header class="py-8 px-6 bg-white shadow-sm border-b">
      <h1 class="text-3xl font-bold text-gray-900">hello-world.c</h1>
      <div class="text-gray-600 mt-2 prose">Literate Programming Documentation</div>
    </header>
    
    <main class="block lg:flex min-h-screen">
      
    
    <!-- File Header: tests/c/hello-world.c -->
    <div class="bg-gray-100 border-b-2 border-gray-300 lg:hidden w-full">
      <div class="w-full lg:w-2/5 bg-gray-50 border-r border-gray-300">
        <div class="p-6">
          <h2 class="text-xl font-semibold text-gray-800 mb-2">
            <svg class="inline-block w-4 h-4 mr-2 text-gray-600" fill="currentColor" viewBox="0 0 20 20">
              <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd"></path>
            </svg>
            <a href="https://github.com/example/repo/tree/main/tests/c/hello-world.c" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline">hello-world.c</a>
          </h2>
        </div>
      </div>
      <div class="hidden lg:block w-3/5 bg-gray-100">
        <div class="p-6">
          <div class="h-full min-h-[3rem] flex items-center">
            <span class="text-gray-500 text-sm italic">Source file</span>
          </div>
        </div>
      </div>
    </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p><code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

              </div>
            </div>
          </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">#include</span><span style="color:#9ECBFF"> &#x3C;stdio.h></span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">int</span><span style="color:#B392F0"> main</span><span style="color:#E1E4E8">(</span><span style="color:#F97583">void</span><span style="color:#E1E4E8">) {</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>Print hello world to the user</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#B392F0">printf</span><span style="color:#E1E4E8">(</span><span style="color:#9ECBFF">"Hello, world!</span><span style="color:#79B8FF">\\\\n</span><span style="color:#9ECBFF">"</span><span style="color:#E1E4E8">);</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>Return zero, indicating succcess</p>

              </div>
            </div>
          </div>
            <div class="bg-gray-900 border-b border-gray-200 lg:hidden">
              <div class="p-6">
                <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">return</span><span style="color:#79B8FF"> 0</span><span style="color:#E1E4E8">;</span></span>
<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre>
              </div>
            </div>
          <div class="bg-white border-b border-gray-200 lg:hidden">
            <div class="p-6">
              <div class="prose">
                <p>This program can be compiled and run with:
<code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

              </div>
            </div>
          </div>
    <div class="hidden lg:flex lg:flex-col w-full">
      
    <!-- File Header: tests/c/hello-world.c -->
    <div class="bg-gray-100 border-b-2 border-gray-300 lg:flex w-full">
      <div class="w-full lg:w-2/5 bg-gray-50 border-r border-gray-300">
        <div class="p-6">
          <h2 class="text-xl font-semibold text-gray-800 mb-2">
            <svg class="inline-block w-4 h-4 mr-2 text-gray-600" fill="currentColor" viewBox="0 0 20 20">
              <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd"></path>
            </svg>
            <a href="https://github.com/example/repo/tree/main/tests/c/hello-world.c" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:text-blue-800 hover:underline">hello-world.c</a>
          </h2>
        </div>
      </div>
      <div class="hidden lg:block w-3/5 bg-gray-100">
        <div class="p-6">
          <div class="h-full min-h-[3rem] flex items-center">
            <span class="text-gray-500 text-sm italic">Source file</span>
          </div>
        </div>
      </div>
    </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p><code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <div class="h-full min-h-[4rem]"></div>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">#include</span><span style="color:#9ECBFF"> &#x3C;stdio.h></span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">int</span><span style="color:#B392F0"> main</span><span style="color:#E1E4E8">(</span><span style="color:#F97583">void</span><span style="color:#E1E4E8">) {</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>Print hello world to the user</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#B392F0">printf</span><span style="color:#E1E4E8">(</span><span style="color:#9ECBFF">"Hello, world!</span><span style="color:#79B8FF">\\\\n</span><span style="color:#9ECBFF">"</span><span style="color:#E1E4E8">);</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>Return zero, indicating succcess</p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <pre class="text-sm leading-relaxed overflow-x-auto" style="background-color: transparent; padding: 0; margin: 0;" tabindex="0"><code style="background-color: transparent;"><span class="line"><span style="color:#F97583">return</span><span style="color:#79B8FF"> 0</span><span style="color:#E1E4E8">;</span></span>
<span class="line"><span style="color:#E1E4E8">}</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class="hidden lg:flex w-full">
              <div class="w-2/5 bg-white border-r border-gray-200">
                <div class="p-6">
                  <div class="prose">
                    <p>This program can be compiled and run with:
<code class="bg-gray-100 px-1 py-0.5 rounded text-sm font-mono">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

                  </div>
                </div>
              </div>
              <div class="w-3/5 bg-gray-900">
                <div class="p-6">
                  <div class="h-full min-h-[4rem]"></div>
                </div>
              </div>
            </div>
    </div>
    </main>
  </div>
</body>
</html>
\`
`;

snapshot[`multi-file processing 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"utf-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <title>Multi-file Project</title>
  <script src=\\"https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4\\"></script>
  <style>
    /* Custom prose styling since Tailwind prose isn't available in CDN */
    .prose {
      color: #374151;
      max-width: none;
    }
    .prose h1 {
      font-size: 1.5rem;
      font-weight: 700;
      margin-bottom: 0.75rem;
      margin-top: 1.5rem;
      color: #111827;
      line-height: 1.25;
    }
    .prose h2 {
      font-size: 1.25rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1.25rem;
      color: #111827;
      line-height: 1.3;
    }
    .prose h3 {
      font-size: 1.125rem;
      font-weight: 600;
      margin-bottom: 0.5rem;
      margin-top: 1rem;
      color: #111827;
      line-height: 1.35;
    }
    .prose p {
      margin-bottom: 1rem;
      line-height: 1.6;
    }
    .prose ul, .prose ol {
      margin-bottom: 1rem;
      padding-left: 1.5rem;
    }
    .prose li {
      margin-bottom: 0.25rem;
      line-height: 1.6;
    }
    .prose ul li {
      list-style-type: disc;
    }
    .prose ol li {
      list-style-type: decimal;
    }
    .prose blockquote {
      border-left: 4px solid #e5e7eb;
      padding-left: 1rem;
      margin: 1rem 0;
      font-style: italic;
      color: #6b7280;
    }
    .prose code {
      background-color: #f3f4f6;
      padding: 0.125rem 0.25rem;
      border-radius: 0.25rem;
      font-size: 0.875rem;
      font-family: ui-monospace, SFMono-Regular, \\"Roboto Mono\\", \\"Cascadia Code\\", \\"Source Code Pro\\", Menlo, Consolas, \\"DejaVu Sans Mono\\", monospace;
    }
    .prose pre {
      background-color: #1f2937;
      color: #e5e7eb;
      padding: 0.75rem;
      border-radius: 0.375rem;
      font-size: 0.875rem;
      overflow-x: auto;
      margin: 1rem 0;
    }
    .prose pre code {
      background-color: transparent;
      padding: 0;
      color: inherit;
    }
    .prose strong {
      font-weight: 600;
      color: #111827;
    }
    .prose em {
      font-style: italic;
    }
    .prose a {
      color: #2563eb;
      text-decoration: underline;
    }
    .prose a:hover {
      color: #1d4ed8;
    }
  </style>
</head>
<body class=\\"bg-gray-50 font-sans\\">
  <div class=\\"max-w-7xl mx-auto\\">
    <header class=\\"py-8 px-6 bg-white shadow-sm border-b\\">
      <h1 class=\\"text-3xl font-bold text-gray-900\\">Multi-file Project</h1>
      <div class=\\"text-gray-600 mt-2 prose\\"><p>Testing <strong>multi-file</strong> processing</p>
</div>
    </header>
    
    <main class=\\"block lg:flex min-h-screen\\">
      
    
    <!-- File Header: tests/c/hello-world.c -->
    <div class=\\"bg-gray-100 border-b-2 border-gray-300 lg:hidden w-full\\">
      <div class=\\"w-full lg:w-2/5 bg-gray-50 border-r border-gray-300\\">
        <div class=\\"p-6\\">
          <h2 class=\\"text-xl font-semibold text-gray-800 mb-2\\">
            <svg class=\\"inline-block w-4 h-4 mr-2 text-gray-600\\" fill=\\"currentColor\\" viewBox=\\"0 0 20 20\\">
              <path fill-rule=\\"evenodd\\" d=\\"M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z\\" clip-rule=\\"evenodd\\"></path>
            </svg>
            hello-world.c
          </h2>
        </div>
      </div>
      <div class=\\"hidden lg:block w-3/5 bg-gray-100\\">
        <div class=\\"p-6\\">
          <div class=\\"h-full min-h-[3rem] flex items-center\\">
            <span class=\\"text-gray-500 text-sm italic\\">Source file</span>
          </div>
        </div>
      </div>
    </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p><code class=\\"bg-gray-100 px-1 py-0.5 rounded text-sm font-mono\\">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

              </div>
            </div>
          </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">#include</span><span style=\\"color:#9ECBFF\\"> &#x3C;stdio.h></span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">int</span><span style=\\"color:#B392F0\\"> main</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#F97583\\">void</span><span style=\\"color:#E1E4E8\\">) {</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>Print hello world to the user</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#B392F0\\">printf</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#9ECBFF\\">\\"Hello, world!</span><span style=\\"color:#79B8FF\\">\\\\n</span><span style=\\"color:#9ECBFF\\">\\"</span><span style=\\"color:#E1E4E8\\">);</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>Return zero, indicating succcess</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">return</span><span style=\\"color:#79B8FF\\"> 0</span><span style=\\"color:#E1E4E8\\">;</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">}</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>This program can be compiled and run with:
<code class=\\"bg-gray-100 px-1 py-0.5 rounded text-sm font-mono\\">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

              </div>
            </div>
          </div>
    <!-- File Header: tests/js/example.js -->
    <div class=\\"bg-gray-100 border-b-2 border-gray-300 lg:hidden w-full\\">
      <div class=\\"w-full lg:w-2/5 bg-gray-50 border-r border-gray-300\\">
        <div class=\\"p-6\\">
          <h2 class=\\"text-xl font-semibold text-gray-800 mb-2\\">
            <svg class=\\"inline-block w-4 h-4 mr-2 text-gray-600\\" fill=\\"currentColor\\" viewBox=\\"0 0 20 20\\">
              <path fill-rule=\\"evenodd\\" d=\\"M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z\\" clip-rule=\\"evenodd\\"></path>
            </svg>
            example.js
          </h2>
        </div>
      </div>
      <div class=\\"hidden lg:block w-3/5 bg-gray-100\\">
        <div class=\\"p-6\\">
          <div class=\\"h-full min-h-[3rem] flex items-center\\">
            <span class=\\"text-gray-500 text-sm italic\\">Source file</span>
          </div>
        </div>
      </div>
    </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>A simple JavaScript literate program
This demonstrates different comment styles in JS</p>

              </div>
            </div>
          </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>Single line comment explaining the constant</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">const</span><span style=\\"color:#79B8FF\\"> GREETING</span><span style=\\"color:#F97583\\"> =</span><span style=\\"color:#9ECBFF\\"> \\"Hello, World!\\"</span><span style=\\"color:#E1E4E8\\">;</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>This is a block comment
explaining the main function</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">function</span><span style=\\"color:#B392F0\\"> greetUser</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#FFAB70\\">name</span><span style=\\"color:#E1E4E8\\">) {</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>JSDoc style comment for the conditional</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">if</span><span style=\\"color:#E1E4E8\\"> (name) {</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>Return personalized greeting</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">return</span><span style=\\"color:#9ECBFF\\"> \`Hello, \${</span><span style=\\"color:#E1E4E8\\">name</span><span style=\\"color:#9ECBFF\\">}!\`</span><span style=\\"color:#E1E4E8\\">;</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">    }</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>Default greeting when no name provided</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">return</span><span style=\\"color:#79B8FF\\"> GREETING</span><span style=\\"color:#E1E4E8\\">;</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">}</span></span></code></pre>
              </div>
            </div>
          <div class=\\"bg-white border-b border-gray-200 lg:hidden\\">
            <div class=\\"p-6\\">
              <div class=\\"prose\\">
                <p>Main execution block
This runs the greeting function</p>

              </div>
            </div>
          </div>
            <div class=\\"bg-gray-900 border-b border-gray-200 lg:hidden\\">
              <div class=\\"p-6\\">
                <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#E1E4E8\\">console.</span><span style=\\"color:#B392F0\\">log</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#B392F0\\">greetUser</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#9ECBFF\\">\\"Literate Programming\\"</span><span style=\\"color:#E1E4E8\\">));</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">console.</span><span style=\\"color:#B392F0\\">log</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#B392F0\\">greetUser</span><span style=\\"color:#E1E4E8\\">());</span></span></code></pre>
              </div>
            </div>
    <div class=\\"hidden lg:flex lg:flex-col w-full\\">
      
    <!-- File Header: tests/c/hello-world.c -->
    <div class=\\"bg-gray-100 border-b-2 border-gray-300 lg:flex w-full\\">
      <div class=\\"w-full lg:w-2/5 bg-gray-50 border-r border-gray-300\\">
        <div class=\\"p-6\\">
          <h2 class=\\"text-xl font-semibold text-gray-800 mb-2\\">
            <svg class=\\"inline-block w-4 h-4 mr-2 text-gray-600\\" fill=\\"currentColor\\" viewBox=\\"0 0 20 20\\">
              <path fill-rule=\\"evenodd\\" d=\\"M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z\\" clip-rule=\\"evenodd\\"></path>
            </svg>
            hello-world.c
          </h2>
        </div>
      </div>
      <div class=\\"hidden lg:block w-3/5 bg-gray-100\\">
        <div class=\\"p-6\\">
          <div class=\\"h-full min-h-[3rem] flex items-center\\">
            <span class=\\"text-gray-500 text-sm italic\\">Source file</span>
          </div>
        </div>
      </div>
    </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p><code class=\\"bg-gray-100 px-1 py-0.5 rounded text-sm font-mono\\">hello-world.c</code> - a brief hello world in C.
This is a literate program</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <div class=\\"h-full min-h-[4rem]\\"></div>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>We start by including stdio.h (&quot;standard input and output&quot;)
a header that allows us to use some functions for input and output</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">#include</span><span style=\\"color:#9ECBFF\\"> &#x3C;stdio.h></span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>The main function is executed when our program starts.
It returns an int to tell the operating system
whether it was successful or failed</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">int</span><span style=\\"color:#B392F0\\"> main</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#F97583\\">void</span><span style=\\"color:#E1E4E8\\">) {</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>Print hello world to the user</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#B392F0\\">printf</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#9ECBFF\\">\\"Hello, world!</span><span style=\\"color:#79B8FF\\">\\\\n</span><span style=\\"color:#9ECBFF\\">\\"</span><span style=\\"color:#E1E4E8\\">);</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>Return zero, indicating succcess</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">return</span><span style=\\"color:#79B8FF\\"> 0</span><span style=\\"color:#E1E4E8\\">;</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">}</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>This program can be compiled and run with:
<code class=\\"bg-gray-100 px-1 py-0.5 rounded text-sm font-mono\\">cc -o hello-world ./hello-world.c &amp;&amp; ./hello-world</code></p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <div class=\\"h-full min-h-[4rem]\\"></div>
                </div>
              </div>
            </div>
    <!-- File Header: tests/js/example.js -->
    <div class=\\"bg-gray-100 border-b-2 border-gray-300 lg:flex w-full\\">
      <div class=\\"w-full lg:w-2/5 bg-gray-50 border-r border-gray-300\\">
        <div class=\\"p-6\\">
          <h2 class=\\"text-xl font-semibold text-gray-800 mb-2\\">
            <svg class=\\"inline-block w-4 h-4 mr-2 text-gray-600\\" fill=\\"currentColor\\" viewBox=\\"0 0 20 20\\">
              <path fill-rule=\\"evenodd\\" d=\\"M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z\\" clip-rule=\\"evenodd\\"></path>
            </svg>
            example.js
          </h2>
        </div>
      </div>
      <div class=\\"hidden lg:block w-3/5 bg-gray-100\\">
        <div class=\\"p-6\\">
          <div class=\\"h-full min-h-[3rem] flex items-center\\">
            <span class=\\"text-gray-500 text-sm italic\\">Source file</span>
          </div>
        </div>
      </div>
    </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>A simple JavaScript literate program
This demonstrates different comment styles in JS</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <div class=\\"h-full min-h-[4rem]\\"></div>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>Single line comment explaining the constant</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">const</span><span style=\\"color:#79B8FF\\"> GREETING</span><span style=\\"color:#F97583\\"> =</span><span style=\\"color:#9ECBFF\\"> \\"Hello, World!\\"</span><span style=\\"color:#E1E4E8\\">;</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>This is a block comment
explaining the main function</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">function</span><span style=\\"color:#B392F0\\"> greetUser</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#FFAB70\\">name</span><span style=\\"color:#E1E4E8\\">) {</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>JSDoc style comment for the conditional</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">if</span><span style=\\"color:#E1E4E8\\"> (name) {</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>Return personalized greeting</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">return</span><span style=\\"color:#9ECBFF\\"> \`Hello, \${</span><span style=\\"color:#E1E4E8\\">name</span><span style=\\"color:#9ECBFF\\">}!\`</span><span style=\\"color:#E1E4E8\\">;</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">    }</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>Default greeting when no name provided</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#F97583\\">return</span><span style=\\"color:#79B8FF\\"> GREETING</span><span style=\\"color:#E1E4E8\\">;</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">}</span></span></code></pre>
                </div>
              </div>
            </div>
            <div class=\\"hidden lg:flex w-full\\">
              <div class=\\"w-2/5 bg-white border-r border-gray-200\\">
                <div class=\\"p-6\\">
                  <div class=\\"prose\\">
                    <p>Main execution block
This runs the greeting function</p>

                  </div>
                </div>
              </div>
              <div class=\\"w-3/5 bg-gray-900\\">
                <div class=\\"p-6\\">
                  <pre class=\\"text-sm leading-relaxed overflow-x-auto\\" style=\\"background-color: transparent; padding: 0; margin: 0;\\" tabindex=\\"0\\"><code style=\\"background-color: transparent;\\"><span class=\\"line\\"><span style=\\"color:#E1E4E8\\">console.</span><span style=\\"color:#B392F0\\">log</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#B392F0\\">greetUser</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#9ECBFF\\">\\"Literate Programming\\"</span><span style=\\"color:#E1E4E8\\">));</span></span>
<span class=\\"line\\"><span style=\\"color:#E1E4E8\\">console.</span><span style=\\"color:#B392F0\\">log</span><span style=\\"color:#E1E4E8\\">(</span><span style=\\"color:#B392F0\\">greetUser</span><span style=\\"color:#E1E4E8\\">());</span></span></code></pre>
                </div>
              </div>
            </div>
    </div>
    </main>
  </div>
</body>
</html>
"
`;
